fix: footer width on mobile

--- a/src/shared/components/layout/footer/Footer.module.css
+++ b/src/shared/components/layout/footer/Footer.module.css
@@ -215,3 +215,10 @@ a:hover {
         text-align: center;
     }
 }
+
+@media (max-width: 768px) {
+    .footerLogo{
+        width: 200px;
+    }
+}
+
